# devtools_helper

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  SECURITY.md  example_config.yaml  install.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  setup.bat  setup.py  setup.sh  simple_build.py  test_installation.py  validate.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
devtools_helper/: __init__.py  cli.py  code_checker.py  config_manager.py  dev_server.py  project_generator.py
examples/: config_demo.py  project_setup.py  quality_check_demo.py
scripts/: install_dev.py  validate_repo.py  verify_install.py
tests/: __init__.py  test_devtools_helper.py
